[project]
name = "lines"
version = "0.1.0"
description = "Simple backend for Twitter/X-like social network"
authors = [
    {name = "Maks Makuta",email = "makuta.maks.mmc@gmail.com"}
]
license = {text = "MIT Licence"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
