[project]
name = "lines"
version = "1.0.0"
description = "Simple backend for Twitter-like social network"
authors = [
    {name = "Maks Makuta",email = "makuta.maks.mmc@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = "3.13.7"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)"

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.17.1"

